# ngc-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  dist-workspace.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-notes.yml  release.yml
crates/bundler/: Cargo.toml
crates/bundler/src/: budgets.rs  chunk.rs  concat.rs  lib.rs  minify.rs  npm_wrap.rs  rewrite.rs  shake.rs
crates/bundler/tests/: defer_integration.rs  snapshot_tests.rs  subpath_imports_integration.rs  vendor_chunk_splitting_integration.rs  worker_integration.rs
crates/bundler/tests/snapshots/: snapshot_tests__bundle_output.snap
crates/cli/: Cargo.toml
crates/cli/src/: incremental.rs  localize.rs  main.rs  ngsw.rs  polyfills.rs  scripts.rs  serve_cmd.rs  watch_cmd.rs
crates/cli/src/localize/: mod.rs  xliff_v1.rs  xliff_v2.rs
crates/cli/src/snapshots/: ngc_rs__tests__public_folder_glob_dist.snap  ngc_rs__tests__public_folder_glob_output_subdir.snap
crates/cli/tests/: budgets_integration.rs  build_json_output.rs  define_integration.rs  serve_integration.rs  watch_integration.rs
crates/dev-server/: Cargo.toml
crates/dev-server/src/: lib.rs
crates/dev-server/tests/: integration.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: lib.rs
crates/linker/: Cargo.toml
crates/linker/src/: class_metadata.rs  component.rs  directive.rs  factory.rs  flatten.rs  injectable.rs  injector.rs  lib.rs  metadata.rs  module_registry.rs  ng_module.rs  pipe.rs  public_exports.rs  selector.rs  transform.rs
crates/linker/tests/: flatten_integration.rs
crates/npm-resolver/: Cargo.toml
crates/npm-resolver/src/: lib.rs  package_json.rs  resolve.rs  scanner.rs
crates/project-resolver/: Cargo.toml
crates/project-resolver/benches/: resolve_bench.rs
crates/project-resolver/src/: angular_json.rs  graph.rs  import_scanner.rs  lib.rs  tsconfig.rs
crates/project-resolver/tests/: snapshot_tests.rs
crates/project-resolver/tests/snapshots/: snapshot_tests__simple_app_edges.snap  snapshot_tests__simple_app_files.snap  snapshot_tests__simple_app_summary.snap
crates/template-compiler/: Cargo.toml
crates/template-compiler/src/: ast.rs  codegen.rs  directive_codegen.rs  extract.rs  factory_codegen.rs  host_codegen.rs  i18n.rs  injectable_codegen.rs  lib.rs  ng_module_codegen.rs  parser.rs  pipe_codegen.rs  preprocessor.rs  rewrite.rs  selector.rs  signal_codegen.rs
crates/template-compiler/src/grammar/: angular.pest
crates/template-compiler/tests/: animation_triggers_integration.rs  host_directives_integration.rs  preprocessor_integration.rs  signal_apis_integration.rs
crates/ts-transform/: Cargo.toml
crates/ts-transform/src/: defines.rs  lib.rs  transform.rs
crates/ts-transform/tests/: integration_tests.rs  snapshot_tests.rs
crates/ts-transform/tests/snapshots/: snapshot_tests__app_component_js.snap  snapshot_tests__app_config_js.snap  snapshot_tests__app_routes_js.snap  snapshot_tests__environment_js.snap  snapshot_tests__environment_prod_js.snap  snapshot_tests__logger_js.snap  snapshot_tests__main_js.snap  snapshot_tests__shared_index_js.snap  snapshot_tests__utils_js.snap
crates/watch/: Cargo.toml
crates/watch/src/: debouncer.rs  event.rs  lib.rs  watcher.rs
scripts/: bench_compare.sh
tests/fixtures/simple-app/: angular.json  tsconfig.json
tests/fixtures/simple-app/src/: index.html
tests/fixtures/simple-app/src/app/: app.component.ts  app.routes.ts
tests/fixtures/simple-app/src/app/admin/: admin.component.ts
tests/fixtures/simple-app/src/app/dashboard/: dashboard.component.ts
tests/fixtures/simple-app/src/app/shared/: index.ts  shared.service.ts  utils.ts
tests/fixtures/simple-app/src/environments/: environment.prod.ts  environment.ts
