[workspace]
resolver = "2"
members = ["crates/cli", "crates/diagnostics", "crates/project-resolver", "crates/ts-transform", "crates/bundler", "crates/template-compiler", "crates/npm-resolver", "crates/linker"]

[workspace.package]
version = "0.7.7"
edition = "2021"
license = "MIT"
authors = ["lukekania"]
repository = "https://github.com/lukekania/ngc-rs"
