[workspace]
resolver = "2"
members = ["crates/cli", "crates/diagnostics", "crates/project-resolver", "crates/ts-transform", "crates/bundler", "crates/template-compiler", "crates/npm-resolver", "crates/linker", "crates/watch", "crates/dev-server"]

[workspace.package]
version = "0.9.6"
edition = "2021"
license = "MIT"
authors = ["lukekania"]
repository = "https://github.com/lukekania/ngc-rs"

# Release with DWARF debug info and no symbol stripping — used by samply to
# map samples back to Rust source. Kept separate from `release` so benchmarks
# continue measuring the stripped/optimised binary.
[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
