[package]
name = "ngc-bundler"
description = "ESM concatenation bundler for ngc-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ngc-diagnostics = { path = "../diagnostics" }
ngc-project-resolver = { path = "../project-resolver" }
oxc_allocator = "0.122"
oxc_parser = "0.122"
oxc_span = "0.122"
oxc_ast = "0.122"
oxc_codegen = "0.122"
oxc_semantic = "0.122"
oxc_sourcemap = "6.1"
petgraph = "0.8"
tracing = "0.1"

[dev-dependencies]
ngc-ts-transform = { path = "../ts-transform" }
ngc-template-compiler = { path = "../template-compiler" }
insta = { version = "1.46", features = ["glob"] }
