[package]
name = "ngc-rs"
description = "Fast Angular project toolchain written in Rust"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "ngc-rs"
path = "src/main.rs"

[dependencies]
ngc-diagnostics = { path = "../diagnostics" }
ngc-project-resolver = { path = "../project-resolver" }
ngc-ts-transform = { path = "../ts-transform" }
ngc-bundler = { path = "../bundler" }
ngc-template-compiler = { path = "../template-compiler" }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
colored = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
regex = "1.12"

[dev-dependencies]
tempfile = "3"
