[package]
name = "ngc-rs"
description = "Fast Angular project toolchain written in Rust"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "ngc-rs"
path = "src/main.rs"

[dependencies]
ngc-diagnostics = { path = "../diagnostics" }
ngc-project-resolver = { path = "../project-resolver" }
ngc-ts-transform = { path = "../ts-transform" }
ngc-bundler = { path = "../bundler" }
ngc-template-compiler = { path = "../template-compiler" }
ngc-npm-resolver = { path = "../npm-resolver" }
ngc-linker = { path = "../linker" }
ngc-watch = { path = "../watch" }
ngc-dev-server = { path = "../dev-server" }
ctrlc = "3.4"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
regex = "1.12"
petgraph = "0.8"
oxc_sourcemap = "6.1"
sha2 = "0.10"
sha1 = "0.10"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
insta = { version = "1.46", features = ["glob"] }
