[package]
name = "ngc-rs"
description = "Native Rust replacement for ng build. Drop-in Angular CLI builder, ~10x faster on real Angular 17+ apps."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../../README.md"
keywords = ["angular", "build", "compiler", "bundler", "cli"]
categories = ["development-tools::build-utils", "command-line-utilities"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "../../README.md",
    "../../LICENSE-MIT",
    "../../LICENSE-APACHE",
]

[[bin]]
name = "ngc-rs"
path = "src/main.rs"

[dependencies]
ngc-diagnostics = { path = "../diagnostics" }
ngc-project-resolver = { path = "../project-resolver" }
ngc-ts-transform = { path = "../ts-transform" }
ngc-bundler = { path = "../bundler" }
ngc-template-compiler = { path = "../template-compiler" }
ngc-npm-resolver = { path = "../npm-resolver" }
ngc-linker = { path = "../linker" }
ngc-watch = { path = "../watch" }
ngc-dev-server = { path = "../dev-server" }
ctrlc = "3.4"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
regex = "1.12"
petgraph = "0.8"
rayon = "1.10"
dashmap = "6"
walkdir = "2"
oxc_sourcemap = "6.1"
sha2 = "0.10"
sha1 = "0.10"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
insta = { version = "1.46", features = ["glob"] }

[features]
# Propagates the per-crate `ast-reuse` feature to template-compiler and linker:
# template-compiler dispatches single-extractor work via a substring pre-check
# (avoiding the legacy 1-to-5 fall-through parses), and linker skips parses on
# component files whose deps array can't reference any registered NgModule.
# Combined with the legacy bundler/cache paths the dist output stays
# byte-identical; the flag is a perf rollback switch only.
ast-reuse = ["ngc-template-compiler/ast-reuse", "ngc-linker/ast-reuse"]
