[package]
name = "ngc-linker"
description = "Angular linker for partially compiled npm packages"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ngc-diagnostics = { path = "../diagnostics" }
ngc-template-compiler = { path = "../template-compiler" }
dashmap = "6"
oxc_allocator = "0.122"
oxc_diagnostics = "0.122"
oxc_parser = "0.122"
oxc_ast = "0.122"
oxc_span = "0.122"
rayon = "1.11"
tracing = "0.1"

[dev-dependencies]
insta = { version = "1.46", features = ["glob"] }
tempfile = "3"

[features]
# Substring fast-path that lets `flatten_component_dependencies` and
# `scan_introduced_specifiers` skip the oxc parse on component files whose
# dependency arrays cannot reference any registered `NgModule`. Same observable
# output, fewer parses per build.
#
# Default OFF — legacy parse-every-component path is the safe rollback.
ast-reuse = []
