[package]
name = "ngc-project-resolver"
version = "0.1.0"
edition = "2021"

[dependencies]
ngc-diagnostics = { path = "../diagnostics" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = "0.8"
rayon = "1.11"
tracing = "0.1"
regex = "1.12"
glob = "0.3"

[dev-dependencies]
insta = { version = "1.46", features = ["glob"] }
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "resolve_bench"
harness = false
