[package]
name = "ngc-project-resolver"
description = "Angular project file graph resolver for ngc-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
ngc-diagnostics = { path = "../diagnostics" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = "0.8"
rayon = "1.11"
tracing = "0.1"
regex = "1.12"
glob = "0.3"
dashmap = "6"

[dev-dependencies]
tempfile = "3"
