[package]
name = "ngc-template-compiler"
description = "Angular template compiler for ngc-rs — compiles @Component templates to Ivy instructions"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ngc-diagnostics = { path = "../diagnostics" }
oxc_allocator = "0.122"
oxc_parser = "0.122"
oxc_span = "0.122"
oxc_ast = "0.122"
pest = "2.7"
pest_derive = "2.7"
rayon = "1.11"
tracing = "0.1"

[dev-dependencies]
ngc-project-resolver = { path = "../project-resolver" }
ngc-ts-transform = { path = "../ts-transform" }
insta = { version = "1.46", features = ["glob"] }
