[package]
name = "ngc-template-compiler"
description = "Angular template compiler for ngc-rs — compiles @Component templates to Ivy instructions"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ngc-diagnostics = { path = "../diagnostics" }
serde_json = "1.0"
oxc_allocator = "0.122"
oxc_diagnostics = "0.122"
oxc_parser = "0.122"
oxc_span = "0.122"
oxc_ast = "0.122"
pest = "2.7"
pest_derive = "2.7"
rayon = "1.11"
tracing = "0.1"

[dev-dependencies]
ngc-project-resolver = { path = "../project-resolver" }
ngc-ts-transform = { path = "../ts-transform" }
insta = { version = "1.46", features = ["glob"] }
tempfile = "3"
which = "8"

[features]
# Skip per-decorator-type re-parses in `compile_file` by using a substring
# pre-check to dispatch only to the matching extractor. Saves up to four
# wasted oxc parses per file at the cost of one quick scan.
#
# Default OFF — legacy fall-through is the safe rollback path.
ast-reuse = []
