[package]
name = "ngc-ts-transform"
description = "TypeScript to JavaScript transform for ngc-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ngc-diagnostics = { path = "../diagnostics" }
oxc_allocator = "0.122"
oxc_parser = "0.122"
oxc_transformer = "0.122"
oxc_codegen = "0.122"
oxc_span = "0.122"
oxc_semantic = "0.122"
oxc_sourcemap = "6.1"
rayon = "1.11"
tracing = "0.1"

